# CmdLineOptions

./: .codecov.yml  .gitignore  CMakeLists.txt  LICENSE  README.md  makefile  meson.build
.github/workflows/: c-cpp.yml  codecov.yml
docs/: coverage.md  github_problems.md  workflow.md
example/: example.cpp  example_as_string.cpp  example_with_error_message.cpp  option_test.cpp
inc/: cmd_line_options.h
src/: cmd_line_options.cpp
test/: test.bats  test_alias.bats  test_alias_err.bats  test_bool.bats  test_bool_err.bats  test_bool_str.bats  test_double.bats  test_double_err.bats  test_double_str.bats  test_enum.bats  test_enum_err.bats  test_enum_str.bats  test_help.bats  test_help_err.bats  test_help_str.bats  test_int.bats  test_int64.bats  test_int64_err.bats  test_int64_str.bats  test_int_err.bats  test_int_list.bats  test_int_list_err.bats  test_int_list_str.bats  test_int_str.bats  test_intrange.bats  test_intrange_err.bats  test_intrange_str.bats  test_str_list.bats  test_str_list_err.bats  test_str_list_str.bats  test_string.bats  test_string_err.bats  test_string_str.bats  test_uint.bats  test_uint64.bats  test_uint64_err.bats  test_uint64_str.bats  test_uint_err.bats  test_uint_str.bats
test/test_as_string/: test_alias.bats  test_bool.bats  test_double.bats  test_enum.bats  test_help.bats  test_int.bats  test_int64.bats  test_int_list.bats  test_uint.bats  test_uint64.bats
test/test_with_error_message/: test_alias.bats  test_bool.bats  test_double.bats  test_enum.bats  test_help.bats  test_int.bats  test_int64.bats  test_int_list.bats  test_uint.bats  test_uint64.bats
